# drone_security_protocol

./: .dockerignore  .gitignore  Dockerfile.drone  Dockerfile.gcs  README.md  config.env  configmapDroneDeployment.yml  docker-compose.gcs.yml  docker-compose.yml  droneDeployment.yml  generateDockerCompose.py  generateManifests.py  requirements.txt  run.py  testNetworkPolicy.yaml
drone_security_protocol/: CMakeLists.txt  initScript.py
drone_security_protocol/DroneRouting/: CMakeLists.txt  config.env  sample_config
drone_security_protocol/DroneRouting/include/routing/: drone.hpp  hashTree.hpp  ipcServer.hpp  ipc_client.hpp  ipc_server.hpp  messages.hpp  pki_client.hpp  routingMap.hpp  routingTableEntry.hpp
drone_security_protocol/DroneRouting/include/routing/network_adapters/: ad_hoc_udp_interface.hpp  kube_udp_interface.hpp  tcp_interface.hpp
drone_security_protocol/DroneRouting/src/: drone.cpp  hashTree.cpp  main.cpp  pki_client.cpp  tesla.cpp
drone_security_protocol/RRT-search/: CMakeLists.txt  drone_wrapper.pyx  main.py  rrt.cpp  rrt.hpp  rrt.py  setup.py
drone_security_protocol/include/routing/: drone.hpp  hashTree.hpp  ipcServer.hpp  routingTableEntry.hpp
drone_security_protocol/include/routing/network_adapters/: kube_udp_interface.hpp  tcp_interface.hpp
drone_security_protocol/src/: drone.cpp  tesla.cpp
etc/: adhoc_network_setup.sh  wifi.sh
etc/docker/: generateDockerCompose.py
etc/kubernetes/: deploymentNetworkPolicy.yml  droneDeployment.yml  generateManifests.py  testNetworkPolicy.yaml
gcs/: CMakeLists.txt  allowed_devices.json  config.py  crl_manager.py  crypto_utils.py  gcs.cpp  gcs.py  main.py  messages.py  pki_gen.py  requirements.txt  test_cert_request.py
src/: Dockerfile.drone  Dockerfile.gcs  docker-compose.yml
src/drone/: CMakeLists.txt  Makefile  drone.cpp  drone.hpp  drone_test.cpp  hashTree.cpp  hashTree.hpp  initScript.py  mapQueue.hpp  messages.hpp  multi_index_container.hpp  routingMap.hpp  routingTableEntry.hpp  tesla.cpp
src/drone/network_adapters/: kube_interface.hpp  tcp_interface.hpp
src/gcs/: gcs.cpp  gcs.hpp
